--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rest</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
@@ -59,6 +59,66 @@
                     ДОМ ЛУЧШЕЙ ЕДЫ
                 </p>
                 <button class="main_btn btn">view menu</button>
+            </div>
+        </div>
+    </section>
+    <section class="history">
+        <div class="container">
+            <div class="history__card-wrap">
+                <div class="history__card">
+                    <img src="./assets/img/cook.svg" alt="cook">
+                    <div class="history__card-title">Магическая <span>атмфосфера</span></div>
+                    <div class="history__card-text">В нашем заведении царит магическая атмосфера
+                        наполненная вкусными ароматами</div>
+                </div>
+                <div class="history__card">
+                    <img src="./assets/img/cook.svg" alt="cook">
+                    <div class="history__card-title">Лучшее качество <span>Еды</span></div>
+                    <div class="history__card-text">Качество нашей 
+                        Еды - отменное!</div>
+                </div>
+                <div class="history__card">
+                    <img src="./assets/img/cook.svg" alt="cook">
+                    <div class="history__card-title">Недорогая <span>Еда</span></div>
+                    <div class="history__card-text">Стоимость нашей Еды зависит только от ее количества. Качество всегда на высоте!</div>
+                </div>
+            </div>
+            <div class="history__bottom-back">
+                <div class="history__bottom-back__text-part">
+                    <div class="history__bottom-back__text-part__title">
+                        <h>Наша <span>История</span></h2>
+                    </div>
+                    <div class="history__bottom-back__text-part__subtitle">
+                        <p>Как и у любого другого самобытного места, у нас есть своя, особая история. Идея ресторана пришла основателям неожиданно. Во время прогулки по лесу создатель нашего ресторана застрял в сотнях километров от ближайшего населенного пункта. Вдали от цивилизации и связи им пришлось навремя обустровать себе нехитрый быт, добывать и готовить себе еду.</p>
+                    </div>
+                    <div class="history__bottom-back__food-counts">
+                        <div class="history__bottom-back__food-count">
+                            <span>93</span>
+                            Напитки
+                        </div>
+                        <div class="history__bottom-back__food-count">
+                            <span>206</span>
+                            Еда
+                        </div>
+                        <div class="history__bottom-back__food-count">
+                            <span>71</span>
+                            Закуски
+                        </div>
+                    </div>  
+                </div>
+                    <img class="history__bottom-back__img-part" src="./assets/img/images.svg" alt="images">
+                  
+            </div>
+        </div>
+    </section>
+    <section class="order">
+        <div class="container">
+            <div class="order__block">
+                <div class="order__block__text">
+                    <div class="order__block__text__title"><p>Отпразднуйте в одном из самых лучших ресторанов.</p></div>
+                    <div class="order__block__text__subtitle"><p>Только в этом месяце бизнес-ланч от 250 ₽</p></div>
+                </div>
+                <button class="order__block_btn btn">заказ столика</button>
             </div>
         </div>
     </section>
