--- a/index.html
+++ b/index.html
@@ -118,7 +118,25 @@
                     <div class="order__block__text__title"><p>Отпразднуйте в одном из самых лучших ресторанов.</p></div>
                     <div class="order__block__text__subtitle"><p>Только в этом месяце бизнес-ланч от 250 ₽</p></div>
                 </div>
-                <button class="order__block_btn btn">заказ столика</button>
+                <button class="order__block__btn btn">заказ столика</button>
+            </div>
+        </div>
+    </section>
+    <section class="cooks">
+        <div class="container">
+            <div class="cooks__title">
+                <p>Наши <span>Повара</span></p>
+            </div>
+            <div class="cooks__img-wrap">
+                <div class="cooks__img">
+                    <img src="./assets/img/cook1.svg" alt="cook1">
+                </div>
+                <div class="cooks__img">
+                    <img src="./assets/img/cook2.svg" alt="cook1">
+                </div>
+                <div class="cooks__img">
+                    <img src="./assets/img/cook3.svg" alt="cook1">
+                </div>
             </div>
         </div>
     </section>
