add dots and hide elements size

--- a/index.html
+++ b/index.html
@@ -138,6 +138,10 @@
                     <img src="./assets/img/cook3.svg" alt="cook1">
                 </div>
             </div>
+            <div class="cooks__dots">
+                <div class="cooks__dots__first-dot"></div>
+                <div class="cooks__dots__second-dot"></div>
+            </div>
         </div>
     </section>
 </body>
