--- a/index.html
+++ b/index.html
@@ -144,5 +144,77 @@
             </div>
         </div>
     </section>
+    <section class="menu">
+        <div class="container">
+            <div class="menu__title">
+                <p>Наше меню</p>
+            </div>
+            <div class="menu__card-wrap">
+                <div class="menu__card">
+                    <div class="menu__card__recommended">
+                        recommended
+                    </div>
+                    <div class="menu__card__img">
+                        <div class="menu__card__img__burger">
+                            <img src="./assets/img/gamburger.svg" alt="burger">
+                        </div>
+                        <div class="menu__card__img__price"></div>
+                    </div>
+                    <div class="menu__card__text">
+                        <div class="menu__card__text__title">
+                            Гамбургер макси
+                        </div>
+                        <div class="menu__card__text__subtitle">
+                            Максимально толстый слой мяса
+                        </div>
+                    </div>
+                    <div class="menu__card__btn btn">
+                        заказать
+                    </div>
+                </div>
+                <div class="menu__card2">
+                    <div class="menu__card2__img">
+                        <div class="menu__card2__img__burger">
+                            <img src="./assets/img/gamburger.svg" alt="burger">
+                        </div>
+                        <div class="menu__card2__img__price">
+                            420
+                        </div>
+                    </div>
+                    <div class="menu__card2__text">
+                        <div class="menu__card2__text__title">
+                            Гамбургер макси
+                        </div>
+                        <div class="menu__card2__text__subtitle">
+                            Максимально толстый слой мяса
+                        </div>
+                    </div>
+                    <div class="menu__card2__btn btn">
+                        заказать
+                    </div>
+                </div>
+                <div class="menu__card2">
+                    <div class="menu__card__img">
+                        <div class="menu__card__img__burger">
+                            <img src="./assets/img/gamburger.svg" alt="burger">
+                        </div>
+                        <div class="menu__card__img__price">
+                        </div>
+                    </div>
+                    <div class="menu__card__text">
+                        <div class="menu__card__text__title">
+                            Гамбургер макси
+                        </div>
+                        <div class="menu__card__text__subtitle">
+                            Максимально толстый слой мяса
+                        </div>
+                    </div>
+                    <div class="menu__card__btn btn">
+                        заказать
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
