--- a/index.html
+++ b/index.html
@@ -139,8 +139,10 @@
                 </div>
             </div>
             <div class="cooks__dots">
-                <div class="cooks__dots__first-dot"></div>
-                <div class="cooks__dots__second-dot"></div>
+                <div class="cooks__dots-wrap">
+                    <div class="cooks__dots__first-dot"></div>
+                    <div class="cooks__dots__second-dot"></div>
+                </div>
             </div>
         </div>
     </section>
@@ -212,6 +214,35 @@
                     <div class="menu__card__btn btn">
                         заказать
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="review">
+        <div class="container">
+            <div class="review__text">
+                <p>Я надолго запомню мой День рождения, проведённый в этом ресторане! Кусочек родной Армении!!! Отдельное спасибо за комплепент в виде фруктовой тарелки. Будем рекомендовать этот ресторан своим друзьям и родственникам также за рубежом, путешествующих в Санкт-Петербург!!!</p>
+            </div>
+            <div class="review__user-wrap">
+                <div class="review__user">
+                    <div class="review__user__img">
+                        <img src="./assets/img/man.svg" alt="man">
+                    </div>
+                    <div class="review__user__text">
+                        <div class="review__user__text__title">
+                            Посетитель
+                        </div>
+                        <div class="review__user__text__name">
+                            Николай
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="review__dots">
+                <div class="review__dots-wrap">
+                    <div class="review__dots__fill-dot"></div>
+                    <div class="review__dots__fill-dot"></div>
+                    <div class="review__dots__border-dot"></div>
                 </div>
             </div>
         </div>
